--- a/main.html
+++ b/main.html
@@ -10,9 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<h1>Welcome to Accio Jobs!</h1>
-	<img  alt="Acciojob image" src="https://images.unsplash.com/photo-1505028106030-e07ea1bd80c3?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDR8fHNvZnR3YXJlJTIwZGV2ZWxvcG1lbnQlMjBjYXJlZXIlMjBwYXRofGVufDB8fHx8MTY3MjMwNDEyNg&ixlib=rb-4.0.3&q=80&w=2000" height="300px">
-	  <section>
+	<header>
+        <h1>Welcome to Accio Jobs!</h1>
+    </header>
+    <main>
+        <section>
+            <img src="https://images.unsplash.com/photo-1505028106030-e07ea1bd80c3?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDR8fHNvZnR3YXJlJTIwZGV2ZWxvcG1lbnQlMjBjYXJlZXIlMjBwYXRofGVufDB8fHx8MTY3MjMwNDEyNg&ixlib=rb-4.0.3&q=80&w=2000" alt="Accio Jobs Image" height="300px">
+        </section>
+        <section>
             <p>5 software program developer profession paths</p>
             <ul>
                 <li>Cloud Development</li>
@@ -22,6 +27,7 @@
                 <li>Web Development</li>
             </ul>
         </section>
+    </main>
 </body>
 
 </html>
